--- a/0x03-React_component/task_1/dashboard/src/CourseList/CourseList.css
+++ b/0x03-React_component/task_1/dashboard/src/CourseList/CourseList.css
@@ -1,26 +1,22 @@
-:root {
-  --border: 2px solid #dae3fcea;
-}
-
 th {
-  border-bottom: var(--border);
-  margin: 0;
-  padding: 0;
-  text-align: left;
+    border-bottom: 1px solid gray;
+    margin: 0;
+    padding: 0;
+    text-align: left;
 }
 
 th:first-child {
-  text-align: center;
+    text-align: center;
 }
 
 table {
-  width: 90%;
-  border: var(--border);
-  margin: auto;
-  margin-top: 40px;
-  padding: 0;
+    width: 90%;
+    border: 1px solid gray;
+    margin: auto;
+    margin-top: 40px;
+    padding: 0;
 }
 
 td {
-  padding-left: 3px;
+    padding-left: 3px;
 }
